clusters/the-cluster/resources/platform-requests/gateway-route/hello-world-route/gateway-route-configure/5058f/resources/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/managed-by: kratix
    app.kubernetes.io/part-of: hello-world
    kratix.io/promise-name: http-service
  name: hello-world-http-redirect
  namespace: hello-world
spec:
  hostnames:
  - hello-world.cluster.integratn.tech
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx-gateway
    namespace: nginx-gateway
    sectionName: http
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
