clusters/the-cluster/resources/platform-requests/gateway-route/hello-world-route/gateway-route-configure/5058f/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/managed-by: kratix
    app.kubernetes.io/part-of: hello-world
    kratix.io/promise-name: http-service
  name: hello-world
  namespace: hello-world
spec:
  hostnames:
  - hello-world.cluster.integratn.tech
  parentRefs:
  - name: nginx-gateway
    namespace: nginx-gateway
    sectionName: https
  rules:
  - backendRefs:
    - name: hello-world
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
